<resources>
    <string name="app_name">V2I_information</string>
    <string name="action_settings">Settings</string>

    * indexNum 序号
    * longitude 经度
    * latitude 纬度
    * speed 速度
    * direction 方向
    * timeNow 时间戳
    * packageNum 包数量

    <string name="deviceName">数据包哈希码</string>
    <string name="deviceNo">设备号</string>
    <string name="indexNum">序号</string>
    <string name="gps_type">GPS类型</string>
    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
    <string name="speed">速度</string>
    <string name="direction">方向</string>
    <string name="timeNow">时间戳</string>
    <string name="packageNum">包数量</string>
    <string name="frequency">频率</string>

    <string name="hint_deviceName">由每次首包发送时间哈希得到</string>
    <string name="hint_deviceNo">百度云推送ChannelID</string>
    <string name="hint_indexNum">数据包的序号，由1开始编号</string>
    <string name="hint_gps_type">WGS84/GCJ02/BD09</string>
    <string name="hint_longitude">GPS经度</string>
    <string name="hint_latitude">GPS纬度</string>
    <string name="hint_speed">速度，单位为m/s</string>
    <string name="hint_direction">方向，0正北，90正东，-90正西，180或-180正南</string>
    <string name="hint_timeNow">时间戳，以距标准时间差</string>
    <string name="hint_packageNum">数据包的数量</string>
    <string name="hint_context">"IND##indexNum##LON##longitude##LAT##latitude##SPE##speed##DIR##direction##TIM##timeNow##PAC##packageNum##</string>
    <string name="hint_frequency">更新的时间间隔，单位S</string>
    <string name="hint_log">显示Log信息,"IND##indexNum##LON##longitude##LAT##latitude##SPE##speed##DIR##direction##TIM##timeNow##PAC##packageNum###</string>

    <string name="btn_GPS">GPS</string>
    <string name="btn_start">开始</string>
    <string name="btn_stop">停止</string>

    <string name="tag_setup">设置</string>
    <string name="package_size">数据包大小</string>
    <string name="send_frequency">发送频率</string>

    <!--AboutMeActivity-->
    <string name="about_me">关于Ceye</string>
    <string name="version">版本</string>
    <string name="version_no">0.1</string>
    <string name="version_data">2018-4-12</string>
    <string name="baiddu_location_sdk">百度定位SDK</string>
    <string name="baidu_error_code_">public int getLocType() 返回值：</string>

    <!--DAActivity-->
    <string name="DA">数据分析</string>
    <string name="item_no">No</string>
    <string name="item_id">ID</string>
    <string name="item_index">Index</string>
    <string name="item_sendTime">SST</string>
    <string name="item_receiveTime">SRT</string>
    <string name="item_my_sendTime">CST</string>
    <string name="item_my_receiveTime">CRT</string>
    <string name="itme_flag_end">END</string>
    <string name="itme_delay">Delay</string>

    <string name="item_context_no">1</string>
    <string name="item_context_id">553556064</string>
    <string name="item_context_index">73</string>
    <string name="item_context_sendTime">1523621829218</string>
    <string name="item_context_receiveTime">1523621829029</string>
    <string name="item_context_my_sendTime">1523621830167</string>
    <string name="item_context_my_receiveTime">1523621831112</string>
    <string name="item_context_flag_end">1</string>
    <string name="item_context_delay">5000ms</string>

    <string name="package_name">数据包哈希码</string>
    <string name="Delay">时延</string>
    <string name="Package_Lost">丢包率</string>

    <string name="table_information">信息表</string>
    <string name="table_packageName">包名表</string>
    <string name="table_control">控制表</string>

</resources>
