<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qq.vip.singleangel.v2i_information.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--* indexNum     序号
            * longitude    经度
            * latitude     纬度
            * speed        速度
            * direction    方向
            * timeNow      时间戳
            * packageNum   包大小-->


        <TextView
            android:id="@+id/tag_deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/deviceName" />

        <TextView
            android:id="@+id/tv_deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/tag_deviceName"
            android:hint="@string/hint_deviceName" />

        <TextView
            android:id="@+id/isEndofPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tag_deviceNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_deviceName"
            android:layout_margin="5dp"
            android:text="@string/deviceNo" />

        <TextView
            android:id="@+id/con_deviceNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tag_deviceName"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/tag_deviceNo"
            android:hint="@string/hint_deviceNo" />

        <TextView
            android:id="@+id/hint_deviceNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tag_deviceName"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tag_indexNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tag_deviceNo"
            android:layout_margin="5dp"
            android:text="@string/indexNum" />

        <TextView
            android:id="@+id/con_indexNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_deviceNo"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/tag_indexNum"
            android:hint="@string/hint_indexNum" />

        <TextView
            android:id="@+id/hint_indexNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tag_deviceNo"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tag_gps_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_indexNum"
            android:layout_margin="5dp"
            android:text="@string/gps_type" />

        <TextView
            android:id="@+id/gps_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_indexNum"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/tag_gps_type"
            android:hint="@string/hint_gps_type" />

        <TextView
            android:id="@+id/hint_gps_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tag_indexNum"
            android:layout_margin="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tag_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_gps_type"
            android:layout_margin="5dp"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/con_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_gps_type"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/tag_longitude"
            android:hint="@string/hint_longitude" />


        <TextView
            android:id="@+id/hint_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tag_gps_type"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tag_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_longitude"
            android:layout_margin="5dp"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/con_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_longitude"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/tag_latitude"
            android:hint="@string/hint_latitude" />

        <TextView
            android:id="@+id/hint_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tag_longitude"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tag_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_latitude"
            android:layout_margin="5dp"
            android:text="@string/speed" />

        <TextView
            android:id="@+id/con_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_latitude"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/tag_speed"
            android:hint="@string/hint_speed" />

        <TextView
            android:id="@+id/hint_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tag_latitude"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tag_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_speed"
            android:layout_margin="5dp"
            android:text="@string/direction" />

        <TextView
            android:id="@+id/con_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_speed"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/tag_direction"
            android:hint="@string/hint_direction" />

        <TextView
            android:id="@+id/hint_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tag_speed"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tag_timeNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_direction"
            android:layout_margin="5dp"
            android:text="@string/timeNow" />

        <TextView
            android:id="@+id/con_timeNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_direction"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/tag_timeNow"
            android:hint="@string/hint_timeNow" />

        <TextView
            android:id="@+id/hint_timeNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tag_direction"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/tag_packageNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_timeNow"
            android:layout_margin="5dp"
            android:text="@string/packageNum" />

        <TextView
            android:id="@+id/con_packageNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_timeNow"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/tag_packageNum"
            android:hint="@string/hint_packageNum" />

        <TextView
            android:id="@+id/hint_packageNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tag_timeNow"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/context"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_packageNum"
            android:layout_margin="5dp"
            android:hint="@string/hint_context" />

        <TextView
            android:id="@+id/tv_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/context"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/frequency" />

        <EditText
            android:id="@+id/ed_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/con_packageNum"
            android:layout_alignTop="@+id/tv_frequency"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/tv_frequency"
            android:focusable="false"
            android:inputType="number"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/spin_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/context"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/tv_frequency">

        </Spinner>

        <TextView
            android:id="@+id/package_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/context"
            android:layout_toEndOf="@id/spin_frequency"
            android:text="@string/package_size" />

        <Spinner
            android:id="@+id/spin_package_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/context"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/package_size">

        </Spinner>

        <TextView
            android:id="@+id/hint_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/context"
            android:layout_below="@+id/context"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/hint_frequency"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/spin_frequency"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:clickable="false"
            android:hint="@string/hint_log"
            android:longClickable="false"
            android:maxLines="20"
            android:scrollbars="vertical"
            android:textSize="15sp" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
