<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/item_no"/>
    <TextView
        android:id="@+id/table_packageName_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/item_context_no"/>
    <TextView
        android:text="@string/package_name"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/table_packageName_pname"
        android:hint="@string/package_name"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:layout_height="wrap_content" />

</LinearLayout>